azrmps/2.2.0/AzureRM.Resources/AzureRM.Resources.md
---
Module Name: AzureRM.Resources
Module Guid: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
Locale: en-US
ms.assetid: E03AC90B-0312-4728-86DE-5336AE522574
uid: AzureRM.Resources
updated_at: 11/11/2016 15:11 PM
ms.date: 11/11/2016
content_git_url: https://github.com/Azure/azure-docs-powershell/blob/marchrelease/azureps-cmdlets-docs/ResourceManager/AzureRM.Resources/v3.1.0/AzureRM.Resources.md
original_content_git_url: https://github.com/Azure/azure-docs-powershell/blob/marchrelease/azureps-cmdlets-docs/ResourceManager/AzureRM.Resources/v3.1.0/AzureRM.Resources.md
gitcommit: https://github.com/Azure/azure-docs-powershell/blob/79eeb985ea480979357fb4695832a0c3d29a48bf
ms.topic: conceptual
author: erickson-doug
ms.author: PowerShellHelpPub
keywords: powershell, cmdlet
---

# AzureRM.Resources Module
## Description
This topic displays help topics for the Azure Resource Manager Cmdlets. 

## AzureRM.Resources Cmdlets
### [Export-AzureRmResourceGroup](./Export-AzureRmResourceGroup.md)
Captures a resource group as a template and saves it to a file.


### [Find-AzureRmResourceGroup](./Find-AzureRmResourceGroup.md)
Searches for resource groups.


### [Find-AzureRmResource](./Find-AzureRmResource.md)
Searches for resources based on specified parameters.


### [Get-AzureRmLocation](./Get-AzureRmLocation.md)
Gets all locations and the supported resource providers for each location.


### [Get-AzureRmPolicyAssignment](./Get-AzureRmPolicyAssignment.md)
Gets policy assignments.


### [Get-AzureRmPolicyDefinition](./Get-AzureRmPolicyDefinition.md)
Gets policy definitions.


### [Get-AzureRmProviderFeature](./Get-AzureRmProviderFeature.md)
Gets information about Azure provider features.


### [Get-AzureRmResourceGroupDeploymentOperation](./Get-AzureRmResourceGroupDeploymentOperation.md)
Gets the resource group deployment operation


### [Get-AzureRmResourceGroupDeployment](./Get-AzureRmResourceGroupDeployment.md)
Gets the deployments in a resource group.


### [Get-AzureRmResourceGroup](./Get-AzureRmResourceGroup.md)
Gets resource groups.


### [Get-AzureRmResourceLock](./Get-AzureRmResourceLock.md)
Gets a resource lock.


### [Get-AzureRmResourceProvider](./Get-AzureRmResourceProvider.md)
Gets a resource provider.


### [Get-AzureRmResource](./Get-AzureRmResource.md)
Gets resources.


### [Invoke-AzureRmResourceAction](./Invoke-AzureRmResourceAction.md)
Invokes an action on a resource.


### [Move-AzureRmResource](./Move-AzureRmResource.md)
Moves a resource to a different resource group or subscription.


### [New-AzureRmPolicyAssignment](./New-AzureRmPolicyAssignment.md)
Creates a policy assignment.


### [New-AzureRmPolicyDefinition](./New-AzureRmPolicyDefinition.md)
Creates a policy definition.


### [New-AzureRmResourceGroupDeployment](./New-AzureRmResourceGroupDeployment.md)
Adds an Azure deployment to a resource group.


### [New-AzureRmResourceGroup](./New-AzureRmResourceGroup.md)
Creates an Azure resource group.


### [New-AzureRmResourceLock](./New-AzureRmResourceLock.md)
Creates a resource lock.


### [New-AzureRmResource](./New-AzureRmResource.md)
Creates a resource.


### [Register-AzureRmProviderFeature](./Register-AzureRmProviderFeature.md)
Registers an Azure provider feature in your account.


### [Register-AzureRmResourceProvider](./Register-AzureRmResourceProvider.md)
Registers a resource provider.


### [Remove-AzureRmPolicyAssignment](./Remove-AzureRmPolicyAssignment.md)
Removes a policy assignment.


### [Remove-AzureRmPolicyDefinition](./Remove-AzureRmPolicyDefinition.md)
Removes a policy definition.


### [Remove-AzureRmResourceGroupDeployment](./Remove-AzureRmResourceGroupDeployment.md)
Removes a resource group deployment and any associated operations.


### [Remove-AzureRmResourceGroup](./Remove-AzureRmResourceGroup.md)
Removes a resource group.


### [Remove-AzureRmResourceLock](./Remove-AzureRmResourceLock.md)
Removes a resource lock.


### [Remove-AzureRmResource](./Remove-AzureRmResource.md)
Removes a resource.


### [Save-AzureRmResourceGroupDeploymentTemplate](./Save-AzureRmResourceGroupDeploymentTemplate.md)
Saves a resource group deployment template to a file.


### [Set-AzureRmPolicyAssignment](./Set-AzureRmPolicyAssignment.md)
Modifies a policy assignment.


### [Set-AzureRmPolicyDefinition](./Set-AzureRmPolicyDefinition.md)
Modifies a policy definition.


### [Set-AzureRmResourceGroup](./Set-AzureRmResourceGroup.md)
Modifies a resource group.


### [Set-AzureRmResourceLock](./Set-AzureRmResourceLock.md)
Modifies a resource lock.


### [Set-AzureRmResource](./Set-AzureRmResource.md)
Modifies a resource.


### [Stop-AzureRmResourceGroupDeployment](./Stop-AzureRmResourceGroupDeployment.md)
Cancels a resource group deployment.


### [Test-AzureRmResourceGroupDeployment](./Test-AzureRmResourceGroupDeployment.md)
Validates a resource group deployment.


### [Unregister-AzureRmResourceProvider](./Unregister-AzureRmResourceProvider.md)
Unregisters a resource provider.



